[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "udpack"
version = "2026.03.01"
authors = [
    { name = "-T.K.-", email = "tk233.xyz@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
]
description = "UDP helper function for robotics workload."
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/T-K-233/UDPack"
